<resources>
    <string name="app_name">OBSSFirstDay</string>
    <string name="inputHint">Guess The Number</string>
    <string name="try_again_btn_text">TRY AGAIN</string>
    <string name="submit_btn_text">SUBMIT</string>
    <string name="result_text">OBSS</string>
    <string name="message_decrease_your_number">Decrease the number</string>
    <string name="message_increase_your_number">Increase the number</string>
    <string name="message_congratulations">Congratulations!</string>
    <string name="empty_field_warning">Please Enter A Number</string>
    <string name="message_game_over">GAME OVER</string>
    <string name="message_new_game_started">NEW GAME</string>
    <string name="remaining_attempts">Remaining Attempts:</string>
    <string name="total_attempt">5</string>
</resources>